--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
 
     <!-- Language selection buttons (visible on logo screen) -->
     <div style="margin-top:28px;">
-      <button class="lang-btn" onclick="setLanguage('hi')">हिन्दी</button>
-      <button class="lang-btn" onclick="setLanguage('en')">English</button>
-      <button class="lang-btn" onclick="setLanguage('gu')">ગુજરાતી</button>
+  <button class="lang-btn" data-lang="hi" type="button">हिन्दी</button>
+  <button class="lang-btn" data-lang="en" type="button">English</button>
+  <button class="lang-btn" data-lang="gu" type="button">ગુજરાતી</button>
     </div>
     <small style="margin-top:12px; color:#4a2e00;">Select language to continue</small>
   </div>
